Refactor tests to use normal equal methods